@@ -9,6 +9,7 @@
         Fix some badly-formatted POD documentation which accidentally included
           some code
         Fix uninitialized warnings in feed tests
+        Fix database setup to ignore tables that aren't Wiki::Toolkit tables
 
 0.74    9  June 2007
         Added list_last_version_before method, to get the version of all the
